MINOR: fixed ModelAdmin right tab layout. Removed scrollbar off the tab strip. Ticket #2900
git-svn-id: svn://svn.silverstripe.com/silverstripe/open/modules/cms/branches/2.3@69514 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/css/ModelAdmin.css
+++ b/css/ModelAdmin.css
@@ -98,7 +98,8 @@ body.ModelAdmin #right table.results td.active {
 }
 
 body.ModelAdmin #right .tab {
-	height: 450px; /* @todo add dynamic resizing */
+	overflow: hidden;
+	padding-bottom: 20px;
 }
 
 body.ModelAdmin #Form_ImportForm dt {
